# learning

./: README.md
actix-web/hello-world/: Cargo.toml
diesel/diesel_demo/: .env  Cargo.toml
rocket/rocket_forwarding_guards/: Cargo.toml
rocket/rocket_hello/: Cargo.toml
rocket/rocket_hello_world/: Cargo.toml
rocket/rocket_requests/: Cargo.toml
rust_book/ch01_hello_cargo/: Cargo.toml
rust_book/ch01_hello_world/: main
rust_book/ch02_guessing_game/: Cargo.toml
rust_book/ch03_branches/: Cargo.toml
rust_book/ch03_fahrenheit_to_celsius/: Cargo.toml
rust_book/ch03_fibonacci/: Cargo.toml
rust_book/ch03_functions/: Cargo.toml
rust_book/ch03_loops/: Cargo.toml
rust_book/ch03_variables/: Cargo.toml
rust_book/ch04_first_word/: Cargo.toml
rust_book/ch05_rectangles/: Cargo.toml
rust_book/ch06_coins/: Cargo.toml
rust_book/ch06_if_let/: Cargo.toml
rust_book/ch06_matching_optionT/: Cargo.toml
rust_book/ch07_restaurant/: Cargo.toml
rust_book/ch08_enterprise/: Cargo.toml
rust_book/ch08_hash_maps/: Cargo.toml
rust_book/ch08_statistic/: Cargo.toml
rust_book/ch08_strings/: Cargo.toml
rust_book/ch08_vectors/: Cargo.toml
rust_book/ch09_error_handling/: Cargo.toml
rust_book/ch10_generics/: Cargo.toml
rust_book/ch10_traits/: Cargo.toml
rust_book/ch12_minigrep/: Cargo.toml
rust_book/ch13_closure/: Cargo.toml
rust_book/ch13_iterators/: Cargo.toml
rust_book/ch15_box/: Cargo.toml
rust_book/ch19_pancakes/: Cargo.toml
rust_book/ch19_pancakes/src/: main.rs
rust_pna/good_cli/: Cargo.toml
sql/: hr_database.sql  load_hr_database.sql
(+66 files in other folders)
