[package]
name = "ch19_pancakes"
version = "0.1.0"
authors = ["Pedro <pdcmpa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ch19_hello_macro = { path = "../ch19_hello_macro" }
ch19_hello_macro_derive = { path = "../ch19_hello_macro/ch19_hello_macro_derive" }
