[package]
name = "good_cli"
version = "0.1.0"
authors = ["Pedro <pdcmpa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dotenv_codegen = "0.14.1"

[dependencies.clap]
version = "~2.33"
default-features = false
features = [ "yaml", "color", "suggestions" ]
